Changes made to attach images to site

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="https://lh3.googleusercontent.com/Ue1ed3bs3gKzQC-NtuJpZLkR1AYGgKvcMCkIIPaKW4Pet1KJJLTYFvtTByl6btCm_qwisa_mefwUwjc=w1920-h897" class="d-block w-100" alt="...">
+            <img src="carousel.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="https://lh3.googleusercontent.com/3zBLUnkO75PKdCBNF5hDIfaR5Fh28M3YtCocJUv56vprBJzQfFogF8nIpmItJedQx6Piiaae-br4i98=w1920-h897" class="d-block w-100" alt="...">
+            <img src="carousel2.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev change" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -107,7 +107,7 @@
         </div>
     </div>
     <footer>
-        <img src="https://lh3.googleusercontent.com/xKVbupzM1iQc5-rUjXJ9kmX7EEptplH1n3szVelei2Bx6Pis-IzFpMpDkeuj17Mi5O4b0Em6hRjZIRk=w1920-h897" alt="foot">
+        <img src="footer.png" alt="foot">
     </footer>
 </body>
 </html>
