--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><img src="https://lh3.googleusercontent.com/nhCIr-CODWvJ3zdF86xQT7EKnvC2tDXVg4_6_awRwifCBlqueEh6rD6LdiR05eYNfmJXNEVXurPLuLc=w1920-h897" alt="logo"></a>
+          <a class="navbar-brand" href="#"><img src="buildlogo.png" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
